[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-tool"
version = "0.1.0"
description = "Hermes local session history manager"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "sisyphus1212" }
]
keywords = ["hermes", "history", "sqlite", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Environment :: Console",
  "Operating System :: OS Independent"
]

[project.scripts]
hhist = "agent_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
